--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  shuntd-uk
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-dinky
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
