--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Mandatory settings
 
-name: Chalk
+name: Omnivorous Tech.
 paginate: 25
-url: # add your site url (format: https://example.com)
+url: omnivorous.tech
 
 blog_theme: dark # Or use dark
 
 # Optional settings
 
 baseurl: # Set if blog doesn't sit at the root of the domain (format: /blog)
-about_enabled: false # Change to true if you wish to show an icon in the navigation that redirects to the about page
+about_enabled: true # Change to true if you wish to show an icon in the navigation that redirects to the about page
 discus_identifier: # Add your Disqus identifier
 ga_analytics: # Add your GA Tracking Id
 local_fonts: false # Change to true if you wish to use local fonts
@@ -17,11 +17,11 @@ rss_enabled: true # Change to false if not
 scrollappear_enabled: true # Change to false to disable
 social:
   dribbble: # Add your Dribbble handle
-  facebook: # Add your Facebook handle
+  facebook: shunter1112
   flickr: # Add your Flickr handle
-  github: # Add your GitHub handle
-  linkedin: # Add your LinkedIn handle
-  twitter: # Add your Twitter handle
+  github: shuntd-uk
+  linkedin: shunter1112
+  twitter: shunter1112
   email: # Add your Email address
   bitcoin: # Add your Bitcoin link or address
   ethereum: # Add your Ethereum link or address
