--- a/omnivorous-tech/package.json
+++ b/omnivorous-tech/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js; rm -rf ../static; cp -Rf ./dist/* ../;"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "pug": "^2.0.3",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
